--- a/resources/[mythic]/mythic-finance/ui/src/index.html
+++ b/resources/[mythic]/mythic-finance/ui/src/index.html
@@ -2,17 +2,18 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<meta http-equiv="X-UA-Compatible" content="ie=edge" />
-		<title>AuthenticRP</title>
-		<link rel="preconnect" href="https://fonts.googleapis.com" />
-		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<link rel="preconnect" href="https://fonts.gstatic.com" />
 		<link
-			href="https://fonts.googleapis.com/css2?family=Oswald&display=swap"
+			href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro&display=swap"
 			rel="stylesheet"
 		/>
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<meta http-equiv="X-UA-Compatible" content="ie=edge" />
+		<title>SandboxRP</title>
 	</head>
-	<body style="background: transparent !important; overflow: hidden">
+	<body
+		style="background: transparent !important; overflow: hidden !important"
+	>
 		<!-- Display a message if JS has been disabled on the browser. -->
 		<noscript
 			>If you're seeing this message, that means
